<resources>
    <string name="app_name">E-DOC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookings">My Bookings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_signin">Sign In</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <!-- Strings related to login -->
    <string name="action_register">Not yet registered ? </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">register </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="link_sign_up"><u>Sign up</u></string>
    <string name="prompt_tp">Phone Number</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_name">Name</string>
    <string name="action_signout">Sign out</string>
    <string name="action_exit">Exit</string>
    <string name="specialization">Specialization</string>
    <string name="hospital">Hospital</string>
    <string name="doctor">Doctor</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_doctor">Select Your doctor</string>
    <string name="chanel">Chanel</string>
    <string name="appointment_for">Appointment For:</string>
    <string name="yourself">Yourself</string>
    <string name="other">Other</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="patient_name">Patient Name</string>
    <string name="my_bookings">My Bookings</string>
    <string name="tp">TP</string>
    <string name="email">Email</string>
    <string name="patient_s_details">Patient\'s Details</string>
    <string name="session_list">Session List</string>
    <string name="book_session">Book Session</string>
    <string name="view_details">Details</string>
    <string name="update">Update</string>
    <string name="reference_number">Reference Number</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
</resources>