<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cmadushan.android.dr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="Id"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_to_sessionListFragment"
            app:destination="@id/sessionListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cmadushan.android.dr.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.cmadushan.android.dr.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home"
            />
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.cmadushan.android.dr.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register"
        app:startDestination="@id/action_nav_register_to_nav_home">
        <action
            android:id="@+id/action_nav_register_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_myBookings"
        android:name="com.cmadushan.android.dr.ui.myBookings.MyBookingsFragment"
        android:label="@string/my_bookings"
        tools:layout="@layout/fragment_my_bookings" >
        <action
            android:id="@+id/action_nav_myBookings_to_viewDetailsFragment"
            app:destination="@id/viewDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/sessionListFragment"
        android:name="com.cmadushan.android.dr.ui.sessionlist.SessionListFragment"
        android:label="@string/session_list"
        tools:layout="@layout/fragment_session_list" >
        <argument
            android:name="DoctorId"
            app:argType="string" />
        <action
            android:id="@+id/action_sessionListFragment_to_bookSessionFragment"
            app:destination="@id/bookSessionFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookSessionFragment"
        android:name="com.cmadushan.android.dr.ui.bookSession.BookSessionFragment"
        android:label="@string/book_session"
        tools:layout="@layout/fragment_book_session" >
        <argument
            android:name="details"
            app:argType="com.cmadushan.android.dr.ui.sessionlist.SessionDetails" />
        <action
            android:id="@+id/action_bookSessionFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/viewDetailsFragment"
        android:name="com.cmadushan.android.dr.ui.myBookings.ViewDetailsFragment"
        android:label="@string/view_details"
        tools:layout="@layout/fragment_view_details" >
        <argument
            android:name="BookingDetails"
            app:argType="com.cmadushan.android.dr.ui.myBookings.BookingDetails" />
    </fragment>
</navigation>