<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ui.myBookings.MyBookingsFragment">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="#DFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/bookingList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:background="#DA10208A"
            android:gravity="center"
            android:text="@string/reference_number"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#DA10208A"
            android:gravity="center"
            android:text="@string/doctor_s_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#DA10208A"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:background="#DA10208A"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

</androidx.constraintlayout.widget.ConstraintLayout>